# python-package-template-old

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: bump-patch-version.yml  python_lint_and_test.yaml  release.yml
python_package_template/: __init__.py  python_package_template.py
tests/: python_package_template_test.py
